--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -667,6 +667,101 @@
       "Predicted selling price for Client 2's home: $234,529.79\n",
       "Predicted selling price for Client 3's home: $896,962.50\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.240288</td>\n",
+       "      <td>12.939632</td>\n",
+       "      <td>18.516564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.643650</td>\n",
+       "      <td>7.081990</td>\n",
+       "      <td>2.111268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.561000</td>\n",
+       "      <td>1.980000</td>\n",
+       "      <td>12.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.880000</td>\n",
+       "      <td>7.370000</td>\n",
+       "      <td>17.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.185000</td>\n",
+       "      <td>11.690000</td>\n",
+       "      <td>19.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.575000</td>\n",
+       "      <td>17.120000</td>\n",
+       "      <td>20.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.398000</td>\n",
+       "      <td>37.970000</td>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RM       LSTAT     PTRATIO\n",
+       "count  489.000000  489.000000  489.000000\n",
+       "mean     6.240288   12.939632   18.516564\n",
+       "std      0.643650    7.081990    2.111268\n",
+       "min      3.561000    1.980000   12.600000\n",
+       "25%      5.880000    7.370000   17.400000\n",
+       "50%      6.185000   11.690000   19.100000\n",
+       "75%      6.575000   17.120000   20.200000\n",
+       "max      8.398000   37.970000   22.000000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -677,7 +772,9 @@
     "\n",
     "# Show predictions\n",
     "for i, price in enumerate(reg.predict(client_data)):\n",
-    "    print \"Predicted selling price for Client {}'s home: ${:,.2f}\".format(i+1, price)"
+    "    print \"Predicted selling price for Client {}'s home: ${:,.2f}\".format(i+1, price)\n",
+    "    \n",
+    "features.describe()"
    ]
   },
   {
@@ -685,7 +782,9 @@
    "metadata": {},
    "source": [
     "**Answer: ** The model predicts \\$412950.00 as price for the house of client 1, \\$234,529.79 for client 2 and \\$896,962.50 for client 3. \n",
-    "The house of client 3 is largest and has lowest poverty level and hence the highest price is justified. Similarly for client 2, the house is smallest among the 3 and poverty level is also highest. Hence the lowest price among the 3 clients is justified for client 2. \n",
+    "The house of client 3 is largest and has lowest poverty level and hence the highest price is justified. Similarly for client 2, the house is smallest among the 3 and poverty level is also highest. Hence the lowest price among the 3 clients is justified for client 2.\n",
+    "\n",
+    "In case of client 1, the number of rooms (5) are less than the average number of rooms in training set (~6)and poverty level of 17% is also slightly higher than mean poverty level of the population (~13%). Although the lower PTRAIO of 15 for client 1 compared to population mean (~18.5) favors higher prices than population mean, lesser number of rooms and higher poverty level pulls the prices down for client 1 as compared with population mean. Hence the price of \\$412950.00 for client 1 is justified when compared with population mean prices of \\$454,342.94 .\n",
     "\n",
     " "
    ]
