--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -775,7 +775,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1147,7 +1146,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Intuitively the income of a person should be directly linked to the education and occupation related factors. From the given data elements, I would rank the most important ones for predicting the income in the following order: capital-gain, hours-per-week, workclass, education_level and occupation."
+    "**Answer:** Intuitively the income of a person should be directly linked to the education and occupation related factors. From the given data elements, I would rank the most important ones for predicting the income in the following order: \n",
+    "* capital-gain : Persons having higher the amount of capital gains will be expected to have higher levels of income and hence I feel this should be the most important variable.\n",
+    "* hours-per-week : This variable measures how much a person has worked over a week. I think as the number of work hours increases and income of ther person should also increase. Although the nature of the work also matters but I feel number of hours should be more important.\n",
+    "* workclass : Like I mentioned above, the nature of work also plays an important role in determining and individual's income levels, I felt workclass variable should be next in terms of variable importance as different workclasses are expected to have different income levels. \n",
+    "* education_level : I would execpt people having higher level of educations to have more ability and skills to earn more and hence it should be one of the important predictors in for estimating an individual's income level.\n",
+    "* occupation : Apart from hours per week and work class, the type of occupation also determines the level of income for an individual. Different occupation categories will have different levels of incomes associated with them and hence I would like to include this variable as well in top 5 variables list.   "
    ]
   },
   {
@@ -1209,7 +1213,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Only two (hours-per-week and capital-gain) of the five features that I thought were most important were actually identified by the model as top five features. Age was the most important factor identfied by the model which makes sense as the age of person can tell how his experience and ability to work. The other two variables indentified by the model are relationship_husband and marital-status_married-civ-spouse. Relationship-husband could be an important factor in case if the wife is dependent on husband and also marital status could also be an important factor depending on whether the spouse is a civilian or with the armed forces.  "
+    "**Answer:** Only two (hours-per-week and capital-gain) of the five features that I thought were most important were actually identified by the model as top five features.\n",
+    "\n",
+    "Age was the most important factor identfied by the model which makes sense as the age of person can tell how his experience and ability to work. As the age increase the ability and experience of a person increases and hence the income levels would also go up till retirement age.\n",
+    "\n",
+    "Marital-status was another variable that I missed out. Model picking up this variable makes sense as married people are more likely to have higher income levels as they need to support their family.\n",
+    "\n",
+    "I missed out relationship variable as well but model picked it up as one of the important factors. Relationship_Husband might have similar explanation as Marital-status_married-civ-spouse where the person has more responsibility and need to earn more to support the family specially if the wife is depedent on husband. In such cases the likelihood of a person earning more than $50,000 goes up."
    ]
   },
   {
