--- a/smartcab/smartcab.ipynb
+++ b/smartcab/smartcab.ipynb
@@ -431,7 +431,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -592,7 +592,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "* Several decaying functions were tried iteratively like $\\epsilon=\\frac{1}{t^2}$,$\\epsilon=ABS(cos(at))$ and $\\epsilon={a^t}$ along with differnt values for alpha and tolerance values. The one that I finally chose was $\\epsilon={a^t}$ where i was able to obtain the satisfactory ratings for both safety and reliability.  After iterating through multiple values of a, the one that was chosen a = 0.99. \n",
+    "* It took close to 450 trials before the testing.\n",
+    "* Different values were tried for both alpha and tolerance but the one that were finally chosen after several optimization runs were alpha of 0.5 and toloerance value of 0.01. Initially lower values (for alpha = 0.05 and  tolerance value = 0.001) were chosen. For the decay functions where the Q-learner converged at lower number of trials, the lower values of alpha and tolerance failed to give optimal ratings since the learner didn't get enough trials to learn. For the decay functions where the Q-learner converged after a very high number of trials (~2500), the lower values of alpha and tolerance gave satisfactory results however the learning time was significantly high. Finally for the chosen decay function where the Learner converged relatively quicker (after about 450 trials), having higher alpha value of 0.5 and tolerance value of 0.01 allowed the learner to get sufficient amount of time to use the learning factor. Alpha of 0.5 stikes the right balance between not allowing the learner to get highly biased to new information and keeping track of previous information. \n",
+    "* Significant improvement was made by the improved Q-Learner as compared to the default one as indicated by improvements in Safety rating from F to A+ and Reliability rating from C to A.\n",
+    "* The very good ratings for both Safety and Reliability dimenstions shows that the Q-Learner has successfully learned the policy.\n",
+    "* I am completely satisfied with the ratings of A+ for Safety and A for Reliability obtained by the Learner.  "
    ]
   },
   {
@@ -626,7 +632,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** "
+    "**Answer:** \n",
+    "* In the given environment where we need to follow US traffic rules, the optimal policy can be summarized as below:\n",
+    "\n",
+    "| Light | waypoint | Action |\n",
+    "| :---: | :---: | :---: |\n",
+    "| Red | Forward, left | Idle |\n",
+    "| Red | Right | Move if no traffic is going towards right, else idle|\n",
+    "| Green | Right, forward | Move|\n",
+    "| Green | Left | Move if no traffic is going towards left, else idle |\n",
+    "\n",
+    "* Here are a few examples of policies produced by the Q-Learner\n",
+    "\n",
+    "   Key: (waypoint, inputs['light'], inputs['left'], inputs['right'], inputs['oncoming'])\n",
+    "   * Example 1: \n",
+    "    ('forward', 'red', 'left', None)\n",
+    " -- forward : -25.27\n",
+    " -- right : 0.90\n",
+    " -- None : 1.80\n",
+    " -- left : -12.26 \n",
+    " \n",
+    "     Here the we need to go forward but the light is red and hence as per the optimal policy we should stay idle. The Learner has learned this policy correctly as the max Q value is assigned to the state 'None'.\n",
+    "   * Example 2: \n",
+    "    ('right', 'red', 'right', 'left')\n",
+    " -- forward : -5.22\n",
+    " -- right : 1.66\n",
+    " -- None : 0.46\n",
+    " -- left : -4.94\n",
+    " \n",
+    "     Here the we need to go right and the light is red. Since there is no oncoming traffic going towards right as per the optimal policy we can go right.The Learner has learned this policy correctly as the max Q value is assigned to the state 'right'.\n",
+    " \n",
+    "  * Example 3: ('forward', 'green', 'left', None)\n",
+    " -- forward : 1.60\n",
+    " -- right : 0.58\n",
+    " -- None : -4.91\n",
+    " -- left : 0.81\n",
+    " \n",
+    "     Here the we need to go forward and the light is green. Since there is no oncoming traffic going towards left as per the optimal policy we can go forward.The Learner has learned this policy correctly as the max Q value is assigned to the state 'forward'.\n",
+    "     \n",
+    " \n",
+    "* After going throught the file I also came across certain instances where the Learner learned incorrect policy.  Few examples are below: \n",
+    "\n",
+    "  * example 1:  ('left', 'green', None, 'right')\n",
+    " -- forward : 0.20\n",
+    " -- right : 1.38\n",
+    " -- None : -3.58\n",
+    " -- left : -18.76\n",
+    " \n",
+    "     Here we need to go left and the light is green and also there is no oncmoing traffic in this direction. Hence as per the optimal policy we should go left however the Learner has assigned max Q value to 'right' and hence it is incorrect. Altough this might not result in an accident but this will take us further away from our destination. \n",
+    "\n",
+    "One of the reason why this could happen is because the Q-Learning agent never reached this state during training. This suggests that the final Q-Learning agent is not as efficient as it could be and may be this is the reason why the agent got A rating for reliability instead of A+.  "
    ]
   },
   {
@@ -664,21 +719,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
