--- a/smartcab/smartcab.ipynb
+++ b/smartcab/smartcab.ipynb
@@ -660,7 +660,7 @@
     " -- None : 0.46\n",
     " -- left : -4.94\n",
     " \n",
-    "     Here the we need to go right and the light is red. Since there is no oncoming traffic going towards right as per the optimal policy we can go right.The Learner has learned this policy correctly as the max Q value is assigned to the state 'right'.\n",
+    "     Here the we need to go right and the light is red. Since there is no oncoming or the left traffic going towards car's right as per the optimal policy we can go right.The Learner has learned this policy correctly as the max Q value is assigned to the state 'right'.\n",
     " \n",
     "  * Example 3: ('forward', 'green', 'left', None)\n",
     " -- forward : 1.60\n",
@@ -668,7 +668,7 @@
     " -- None : -4.91\n",
     " -- left : 0.81\n",
     " \n",
-    "     Here the we need to go forward and the light is green. Since there is no oncoming traffic going towards left as per the optimal policy we can go forward.The Learner has learned this policy correctly as the max Q value is assigned to the state 'forward'.\n",
+    "     Here the we need to go forward and the light is green. Since the agent has the right of way as per the optimal policy we can go forward.The Learner has learned this policy correctly as the max Q value is assigned to the state 'forward'.\n",
     "     \n",
     " \n",
     "* After going throught the file I also came across certain instances where the Learner learned incorrect policy.  Few examples are below: \n",
@@ -679,7 +679,7 @@
     " -- None : -3.58\n",
     " -- left : -18.76\n",
     " \n",
-    "     Here we need to go left and the light is green and also there is no oncmoing traffic in this direction. Hence as per the optimal policy we should go left however the Learner has assigned max Q value to 'right' and hence it is incorrect. Altough this might not result in an accident but this will take us further away from our destination. \n",
+    "     Here we need to go left and the light is green. Since the oncoming traffic is turning right, as per the optimal policy we should go forward however the Learner has assigned max Q value to 'right' and hence it is incorrect. Altough this might not result in an accident but this will take us further away from our destination. \n",
     "\n",
     "One of the reason why this could happen is because the Q-Learning agent never reached this state during training. This suggests that the final Q-Learning agent is not as efficient as it could be and may be this is the reason why the agent got A rating for reliability instead of A+.  "
    ]
